# LifeOS-AI

./: GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  lifeos.db  pyproject.toml  streamlit_app.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
documentation/: implementation_plan.md  kaggle_writeup.md  task.md  walkthrough.md
expense_agent/: agent.py  agent_runtime_app.py  db.py  fast_api_app.py  mcp_server.py  mcp_server_fast.py
expense_agent/app_utils/: .requirements.txt  telemetry.py  typing.py
frontend/: main.py
frontend/static/: approval.html
scratch/: check_db.py  inspect_agent.py  inspect_sessions.py  populate_mock_data.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/: conftest.py  test_integration.py
tests/eval/: eval_config.yaml  generate_traces.py  grade_local.py  list_models.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_agent_runtime_app.py
