[project]
name = "submission-frontend"
version = "0.1.0"
description = "Manager Dashboard service for Ambient Expense Agent"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-adk",
    "google-cloud-aiplatform",
    "httpx>=0.27.0",
    "google-auth>=2.29.0",
]
